<resources>
    <string name="app_name">Canopy</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="command">Command</string>
    <string name="debug_button">Debug Button</string>
    <string name="start_service">Start</string>
    <string name="stop_service">Stop</string>
    <string name="log_out">Log Out</string>
    <string name="notifications">Notifications</string>
    <string name="assistant">Assistant</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="background_service_title">PolarisBackgroundService is running</string>
    <string name="background_service_text">We are using your camera, microphone and location to observe your surrounding and keep you safe.</string>
    <string name="notification_channel_name">Polaris Background Service</string>
    <string name="notification_channel_description">Notification channel for Polaris background service</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="google_sign_in">Sign in with Google</string>

    <string name="home_fragment_image_description">The most recent image taken by the camera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="view_travel_history">View Travel History</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="start_filter">Start Filter</string>
    <string name="end_filter">End Filter</string>
    <string name="manage_family">Manage Family</string>
    <string name="example">Example</string>
    <string name="tap_in">Tap In</string>
    <string name="report_issue">Report Issue</string>
    <string name="help">Help</string>
    <string name="temperature_24_c">Temperature: 24°C</string>
    <string name="temperature_and_humidity_data">temperature and humidity data</string>
    <string name="profile">Profile</string>
    <string name="your_activity">Your Activity</string>
    <string name="searchbar_hint">Search Canopies</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="volunteer_history">Volunteer History</string>
    <string name="points">Points</string>
    <string name="hold_near_reader">Hold Near Reader</string>
    <string name="example_tan">Example Tan</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="example_phone_number">91234567</string>
    <string name="user_id">User Id</string>
    <string name="example_user_id">X893210nsa22</string>
    <string name="joined_date">Joined Date</string>
    <string name="example_date">10 Dec 2024</string>
    <string name="example_email_address">example@test.com</string>
    <string name="previous_sessions">Previous Sessions</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="this_months_contributions">This Month\'s Contributions</string>
    <string name="locations">Locations</string>
    <string name="most_visited">Most Visited</string>
    <string name="canopytwo_ngeeann">CanopyTwo@NgeeAnn</string>
    <string name="canopyone_ngeeann">CanopyOne@NgeeAnn</string>

</resources>
