<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Navigate">
        <menu>
            <item android:title="@string/home"
                android:id="@+id/side_panel_home"
                android:icon="@drawable/baseline_home_24"
                android:checked="true"/>
            <item android:title="@string/profile"
                android:id="@+id/side_panel_profile"
                android:icon="@drawable/baseline_person_24"/>

            <item android:title="@string/settings"
                android:id="@+id/side_panel_settings"
                android:icon="@drawable/baseline_settings_24"/>
            <item android:title="@string/upcoming_events"
                android:id="@+id/side_panel_upcoming_events"
                android:icon="@drawable/baseline_calendar_month_24"/>
            <item
                android:title="@string/volunteer_history"
                android:id="@+id/side_panel_volunteer_history"
                android:icon="@drawable/baseline_history_24"/>
        </menu>
    </item>
    <item android:title="Others">
        <menu>
            <item android:title="@string/points"
                android:id="@+id/side_panel_points"
                android:icon="@drawable/baseline_stars_24"/>
            <item android:title="@string/log_out"
                android:id="@+id/side_panel_logout"
                android:icon="@drawable/baseline_logout_24"
                android:checked="true"/>

        </menu>
    </item>
</menu>