<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppTheme"
    android:padding="10dp"
    >
    <FrameLayout
        tools:context=".LoginLandingFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/fragment_login_form_appName_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:gravity="center_horizontal"
                style="@style/Theme.Polaris.TitleTextView"
                />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/light_blue"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                style="@style/Theme.Polaris.TextView1"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_login_form_email_textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:placeholderText="@string/email_address"
                app:counterEnabled="true"
                android:hint="@string/email_address"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_login_form_email_textInputEditText"
                    style="@style/Theme.Polaris.InputField.EditText"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_login_form_password_textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:placeholderText="@string/password"
                app:counterEnabled="true"
                android:hint="@string/password"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_login_form_password_textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Theme.Polaris.InputField.EditText"
                    android:imeOptions="actionDone"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="vertical"
            android:layout_gravity="bottom">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_login_form_loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Theme.Polaris.CustomButton2"
                android:text="@string/login"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_login_form_cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                style="@style/Theme.Polaris.CustomButton2.Cancel"
                />
        </LinearLayout>


    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
