<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment"
    android:theme="@style/AppTheme">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_marginTop="300dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_account_box_24"
                    app:tint="?attr/colorOnSurface" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="@dimen/mediumLarge_text_size"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/fragment_profile_name_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/example_tan"
                        android:textSize="@dimen/medium_text_size"/>

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_phone_android_24"
                    app:tint="?attr/colorOnSurface"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_address"
                        android:textSize="@dimen/mediumLarge_text_size"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/fragment_profile_email_address_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/example_email_address"
                        android:textSize="@dimen/medium_text_size"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_phone_android_24"
                    app:tint="?attr/colorOnSurface"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number"
                        android:textSize="@dimen/mediumLarge_text_size"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/fragment_profile_phone_number_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/example_phone_number"
                        android:textSize="@dimen/medium_text_size"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_account_box_24"
                    app:tint="?attr/colorOnSurface"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_id"
                        android:textSize="@dimen/mediumLarge_text_size"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/fragment_profile_uid_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/example_user_id"
                        android:textSize="@dimen/medium_text_size"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_calendar_month_24"
                    app:tint="?attr/colorOnSurface"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/joined_date"
                        android:textSize="@dimen/mediumLarge_text_size"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/fragment_profile_joined_date_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/example_date"
                        android:textSize="@dimen/medium_text_size"/>


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/animated_background_1"
        android:orientation="vertical"
        android:gravity="center">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/blue"
            app:shapeAppearanceOverlay="@style/CircularImageView"
            android:scaleType="centerCrop"
            android:layout_margin="@dimen/fab_margin"
            />
        <TextView
            android:id="@+id/fragment_profile_name_main_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_tan"
            android:textStyle="bold"
            android:textSize="@dimen/large_text_size" />

    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_profile_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style = "?attr/materialIconButtonStyle"
            app:icon="@drawable/baseline_close_24"
            android:layout_gravity="end"
            app:iconTint="?attr/colorOnSurface"/>
    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>